outSql.txt
[eval]:2
import('./run_sql.js').then(m => m.runSql('SELECT polname, qual, cmd, roles FROM pg_policies WHERE tablename = \\'users\\';'))
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Expected ',', got '<lexing error>'

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.14.0
